feat(ticket-rest): add get tickets by assignee endpoint
