# modules/ticket-rest/ticket-rest-api/src/main/java/ticket/rest/resource/v1_0/TicketResource.java
@@ -43,6 +43,9 @@ public interface TicketResource {
 
 	public Page<Ticket> getTickets() throws Exception;
 
+	public Page<Ticket> getTicketsByAssignedToUserId(Long assignedToUserId)
+		throws Exception;
+
 	public default void setContextAcceptLanguage(
 		AcceptLanguage contextAcceptLanguage) {
 	}
