# modules/ticket-rest/ticket-rest-impl/src/main/java/ticket/rest/internal/graphql/servlet/v1_0/ServletDataImpl.java
@@ -76,6 +76,11 @@ public class ServletDataImpl implements ServletData {
 						"query#tickets",
 						new ObjectValuePair<>(
 							TicketResourceImpl.class, "getTickets"));
+					put(
+						"query#ticketsByAssignedToUserId",
+						new ObjectValuePair<>(
+							TicketResourceImpl.class,
+							"getTicketsByAssignedToUserId"));
 				}
 			};
 
